# shellbot

./: .gitignore  README.md  TODO.md  example.yaml  launcher.sh  metasploit_and_shellbot_launcher.sh  pyproject.toml  shellbot.conf  shellbot.json  shellbot.py  shellbot.yaml  shellbot.yaml.example  token.txt
src/plugins/c2/: covenant.py  empire.py  metasploit.py  posh.py
src/plugins/notification/: discord.py  slack.py  teams.py
src/shellbot/: __main__.py
src/utils/: notifications.py
