[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "shellbot"
version = "2.0.0"
dependencies = [
    "msgpack",
    "pyyaml",
    "urllib3",
    'importlib-metadata; python_version<"3.8"',
]

[project.scripts]
shellbot = "shellbot.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["shellbot"]
